# BirdScanner

./: .dockerignore  .env.example  .gitignore  .pylintrc  CLAUDE.md  Dockerfile.api  Dockerfile.detector  README.md  TODO.md  deploy.env.example  deploy.ps1  docker-compose.yml  mypy.ini  pyproject.toml  requirements.api.txt  requirements.detector.txt  requirements.dev.txt  requirements.imx-emulator.txt  requirements.txt
backend/: dependencies.py  main.py
birdscanner/: __init__.py
db/: __init__.py  database.py  deleter.py  models.py  writer.py
dev/: __init__.py  run_emulated.py  tracking_review.py
docs/: detection-pipeline.md
examples/: birder_models.py  imx500_detection.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
src/: camera_server.py  classification.py  classification_pipeline.py  config.py  crop.py  crop_controller.py  detection_utils.py  main.py  object_detection.py  threading_logic.py  track_logging.py  tracking.py  video_buffer.py  video_writer.py
tests/: .pylintrc  conftest.py  test_backend.py  test_best_frame.py  test_bird_species_classification.py  test_camera_server.py  test_classification.py  test_classification_manager.py  test_crop.py  test_deleter.py  test_detection_utils.py  test_detection_writer.py  test_process_detections.py  test_reference.py  test_species_reference_builder.py  test_video_recorder.py
tools/: __init__.py  build_geomodel_map.py  build_imx_emulator.py  build_species_reference.py  camera_smoke.py  imx_detector.py  imx_emulator_probe.py  quantize.py  reference_thumbnails.py
(+166 files in other folders)
