[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "birdscanner"
version = "0.1.0"
description = "Real-time bird detection and classification for the Raspberry Pi + Sony IMX500 AI Camera."
requires-python = ">=3.10"
# Runtime dependencies are pinned per deployment target in the requirements files
# (requirements.detector.txt / requirements.api.txt) because the detector and API run
# on different interpreters with different native constraints; they are intentionally
# not duplicated here.

[tool.setuptools.packages.find]
include = ["birdscanner*"]

[tool.pytest.ini_options]
# Put the repo root on sys.path so `pytest` (run from the repo root) resolves the
# `birdscanner` package without an editable install or module-mode invocation.
pythonpath = ["."]
testpaths = ["tests"]
